# nostr_web_wasm

./: Cargo.toml  README.md  index.html
src/: main.rs
