[package]
name = "nostr-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.22", default-features = false, features = [
   "Window"
] }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.29"
futures = "0.3.25"